<resources>
    <string name="project_number">1034650838814</string>
    <string name="clear_screen">Clear Screen</string>
    <string name="first_launch">First Launch</string>
    <string name="num_of_missed_messages">MissedMessageCount</string>
    <string name="lines_of_message_count">LinesOfMessageCount</string>
    <string name="preferences">PreferencesFile</string>
    <string name="notification_number">1337</string>
    <string-array name="option_array">
        <item>Market</item>
        <item>Commodity</item>
    </string-array>
    <string name="app_name">Mandi Trades</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string name="search_hint">Search</string>
    <string name="fruits">Fruits</string>
    <string name="vegetables">Vegetables</string>
    <string name="cereals">Cereals</string>
    <string name="pulses">Pulses</string>
    <string name="spices">Spices</string>
    <string-array name="nav_drawer_items">
        <item></item>
        <item>English</item>
        <item>My Wishlist</item>
        <item>Subscriptions</item>
        <item>Settings</item>
        <item>Help</item>
        <item>Rate The App</item>
        <item>Share The App</item>
        <item>Logout</item>
        <item>Delete Account</item>
    </string-array>
    <string-array name="actionsheet_items">
        <item>English</item>
        <item>Hindi</item>
        <item>Tamil</item>
        <item>Telegu</item>
        <item>Kannada</item>
        <item>Malyalam</item>
    </string-array>
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="blank"></string>
    <string name="slide_to_cancel">Slide To Cancel</string>
    <string name="press_and_hold_to_record">Press and hold to record</string>
    <string name="enter_mobile_number">Enter Mobile Number*</string>
    <string name="submit">Submit</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="enter_otp">Please enter OTP sent by SMS</string>
    <string name="otp">OTP</string>
    <string name="skip">Skip</string>
    <string name="username">Username</string>
    <string name="change_state">Change State</string>
    <string name="select_state">Select State</string>
    <string name="notice">Commodity prices loaded from data.gov.in. Quantity in Quintals. Comments/Feedback Email: ceo@farmobi.in</string>
    <string name="govt_analysis_of_feedback">Govt. Analysis of Feedback</string>
    <string name="rate_user">Rate User !</string>
    <string name="create_alert">Create Alert</string>
    <string name="type_your_feedback">Type your feedback</string>
    <string name="govt_feedback_analysis_text1">By Introducing the Guaranteed Loan Program the suicide rate of farmers has fallen from an average of 11.2 % to 6.8%</string>
    <string name="govt_feedback_analysis_text2">By Introducting Sustainable Agriculture Reasearch and Eductaion Program (SARE) number of farmers grew by 12% and productivity increased from 145 lakh tonnes to 180 lakh tonnes.</string>
    <string name="back">Back</string>
    <string name="call_us">Call Us</string>
    <string name="email_us">Email Us</string>
    <string name="faq_text">
<![CDATA[
<html>
 <head></head>
 <body >
 

<h4>Why do we need this?</h4>
<p>Biggest problem for farmers is marketing – as they are not able to sell their produce in timely manner. There is no accurate data available with even government on what is farmer growing in fields as it changes often with season. So we get to know about availability only AFTER farmer harvests and gets it to a mandi (auction place or wholesale market). Farmers deal mostly through agents and middlemen. They are not aware of other bulk buyers like hotels, caterers, exporters, food processors, retail supermarkets etc., when a farmer registers in Mandi Trades, we capture all his produce details and location of Produce. Buyers can get all details and contact farmer directly through smart phone.</p>

<h4>How does one use this App?</h4>
<p>Some typical queries which one can get answers from the portal: For farmer: List Agriculture Commodity details on the Mobile Phone. For buyers: Who are the farmers growing a particular produce or variety. Narrow down by geography, location, price, availability, yield and various advanced parameters</p>

<h4>How will this benefit farmers?</h4>
<p>Farmers have more choice of buyers, who are now buying in bulk from mandi can deal directly as volumes will be higher and rates also better than mandi rates. Reduce ‘last minute’ rush sale, and negotiating well ahead. Get to know average demand, peak/low demand season, in-season and off-season needs by querying the data and can plan their farms. Get to know more precise demand data and rare items, and can grow them to get higher prices. In short – More buyers, better prices for farmers and less wastage.</p>


<h4>What if buyer refuses to pay or cancels transaction without notice?</h4>
<p>Farmer and Buyer are directly responsible for their decisions and Mandi Trades will NOT take responsibility for bad deals.</p>


<h4>Who will fit in a buyer category?</h4>
<p>The Mobile App / Web Portal is targeted at B2B, bulk buyers only. Primary buyer segment who would benefit are: Hotels and caterers, Retail supermarkets, Local neighbourhood traders, Food processors, Exporters.</p>


<h4>What are the key problems from buyer’s side which the App would address?</h4>
<p>Most buyers buy from agents or Mandi / wholesale market. The App addresses the problems of High price fluctuation, poor quality control, no value addition agents etc. App provides a level playing field to everyone who is interested to buy a farm produce</p>


<h4>How will the App benefit buyers?</h4>
<p>Search and locate farmers and aggregators easily using internet/mobile. Plan procurement well in advance as harvest information is available for future. Direct dealing and visiting farms prior to purchase enables better backward integration and quality·</p>

 </body>
</html>
]]>
    </string>
    <string name="rate">Rate</string>
</resources>