<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_normal" >

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_row"
        android:gravity="center"
        android:textSize="@dimen/text_size_large" />

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_large" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerHorizontal="true"
            android:text="@string/rate"
            android:textSize="@dimen/text_size_large" />

        <RatingBar
            android:id="@+id/rating_bar"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_alignParentRight="true"
            android:layout_centerHorizontal="true"
            android:numStars="5"
            android:progressDrawable="@drawable/rating_bar_large" />
    </RelativeLayout>

    <EditText
        android:id="@+id/feedback_message"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_comment_box"
        android:layout_marginTop="@dimen/padding_normal"
        android:background="@drawable/border_shape"
        android:hint="@string/type_your_feedback"
        android:textSize="@dimen/text_size_large" >
    </EditText>

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_button"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/margin_left_right"
        android:background="#ff9ab63c"
        android:padding="@dimen/padding_normal"
        android:text="@string/submit"
        android:textColor="@android:color/white" />

</LinearLayout>