<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:orientation="vertical"
            android:padding="@dimen/padding_commodity_title" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/padding_commodity_title" >

                <TextView
                    android:id="@+id/fruit_text"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_commodity_title"
                    android:background="@drawable/green_opa"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/fruits"
                    android:textColor="#000000"
                    android:textSize="@dimen/text_size_commodity_title" />

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_commodity_title"
                    android:scrollbars="none" >

                    <LinearLayout
                        android:id="@+id/linear_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="@dimen/padding_commodity_title" >
                    </LinearLayout>
                </HorizontalScrollView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/padding_commodity_title" >

                <TextView
                    android:id="@+id/vegetable_text"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_commodity_title"
                    android:background="@drawable/green_opa"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/vegetables"
                    android:textColor="#000000"
                    android:textSize="@dimen/text_size_commodity_title" />

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_commodity_title"
                    android:scrollbars="none" >

                    <LinearLayout
                        android:id="@+id/linear_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="@dimen/padding_commodity_title" >
                    </LinearLayout>
                </HorizontalScrollView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/padding_commodity_title" >

                <TextView
                    android:id="@+id/cereal_text"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_commodity_title"
                    android:background="@drawable/green_opa"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/cereals"
                    android:textColor="#000000"
                    android:textSize="@dimen/text_size_commodity_title" />

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_commodity_title"
                    android:scrollbars="none" >

                    <LinearLayout
                        android:id="@+id/linear_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="@dimen/padding_commodity_title" >
                    </LinearLayout>
                </HorizontalScrollView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/padding_commodity_title" >

                <TextView
                    android:id="@+id/pulse_text"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_commodity_title"
                    android:background="@drawable/green_opa"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/pulses"
                    android:textColor="#000000"
                    android:textSize="@dimen/text_size_commodity_title" />

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_commodity_title"
                    android:scrollbars="none" >

                    <LinearLayout
                        android:id="@+id/linear_4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="@dimen/padding_commodity_title" >
                    </LinearLayout>
                </HorizontalScrollView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/padding_commodity_title" >

                <TextView
                    android:id="@+id/spice_text"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_commodity_title"
                    android:background="@drawable/green_opa"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/spices"
                    android:textColor="#000000"
                    android:textSize="@dimen/text_size_commodity_title" />

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_commodity_title"
                    android:scrollbars="none" >

                    <LinearLayout
                        android:id="@+id/linear_5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="@dimen/padding_commodity_title" >
                    </LinearLayout>
                </HorizontalScrollView>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>